--- a/contact.html
+++ b/contact.html
@@ -15,14 +15,17 @@
     <div class="top-bar">Helpline : 6366975666</div>
     <nav class="navbar">
       <img src="header_logo.svg" alt="Cancer Ribbon" />
-      <button id="menu-toggle" class="hamburger">&#9776;</button>
-      <ul id="nav-links">
-        <li><a href="home.html">Home</a></li>
-        <li><a href="index.html">About Us</a></li>
-        <li><a href="involved.html">Get Involved</a></li>
-        <li><a href="contact.html">Contact Us</a></li>
-      </ul>
-    </nav>
+       <!-- Hamburger Icon -->
+       <button id="menu-toggle" class="hamburger">&#9776;</button>
+
+       <!-- Navigation Links -->
+       <ul id="nav-links">
+         <li><a class="active" href="home.html">Home</a></li>
+         <li><a class="active" href="index.html">About Us</a></li>
+         <li><a class="active" href="involved.html">Get Involved</a></li>
+         <li><a class="active" href="contact.html">Contact Us</a></li>
+       </ul>
+     </nav>
   </header>
 
 
