--- a/contact.html
+++ b/contact.html
@@ -15,16 +15,18 @@
     <div class="top-bar">Helpline : 6366975666</div>
     <nav class="navbar">
       <img src="header_logo.svg" alt="Cancer Ribbon" />
-       <!-- Hamburger Icon -->
-       <button id="menu-toggle" class="hamburger">&#9776;</button>
+      <!-- Hamburger Menu Icon -->
+<button class="hamburger" onclick="toggleMobileMenu()">☰</button>
 
-       <!-- Navigation Links -->
-       <ul id="nav-links">
-         <li><a class="active" href="home.html">Home</a></li>
-         <li><a class="active" href="index.html">About Us</a></li>
-         <li><a class="active" href="involved.html">Get Involved</a></li>
-         <li><a class="active" href="contact.html">Contact Us</a></li>
-       </ul>
+<!-- Navigation Links -->
+<ul id="nav-links">
+  <li><a href="#">Home</a></li>
+  <li><a href="#">About Us</a></li>
+  <li><a href="#">Health Support Program</a></li>
+  <li><a href="#">Get Involved</a></li>
+  <li><a href="#">Contact Us</a></li>
+</ul>
+
      </nav>
   </header>
 
@@ -145,5 +147,12 @@
       });
     });
   </script>
+  <script>
+    function toggleMobileMenu() {
+      const navLinks = document.getElementById('nav-links');
+      navLinks.classList.toggle('show');
+    }
+  </script>
+  
 </body>
 </html>
