--- a/involved.html
+++ b/involved.html
@@ -16,16 +16,19 @@
     <nav class="navbar">
       <img src="header_logo.svg" alt="Cancer Ribbon" />
 
-      <!-- Hamburger Icon -->
-      <button id="menu-toggle" class="hamburger">&#9776;</button>
+     
+   <!-- Hamburger Menu Icon -->
+<button class="hamburger" onclick="toggleMobileMenu()">☰</button>
 
-      <!-- Navigation Links -->
-      <ul id="nav-links">
-        <li><a href="home.html">Home</a></li>
-        <li><a href="index.html">About Us</a></li>
-        <li><a href="involved.html">Get Involved</a></li>
-        <li><a href="contact.html">Contact Us</a></li>
-      </ul>
+<!-- Navigation Links -->
+<ul id="nav-links">
+  <li><a href="#">Home</a></li>
+  <li><a href="#">About Us</a></li>
+  <li><a href="#">Health Support Program</a></li>
+  <li><a href="#">Get Involved</a></li>
+  <li><a href="#">Contact Us</a></li>
+</ul>
+
     </nav>
   </header>
 
@@ -161,5 +164,12 @@
       });
     });
   </script>
+  <script>
+    function toggleMobileMenu() {
+      const navLinks = document.getElementById('nav-links');
+      navLinks.classList.toggle('show');
+    }
+  </script>
+  
 </body>
 </html>
