--- a/involved.html
+++ b/involved.html
@@ -22,12 +22,11 @@
 
 <!-- Navigation Links -->
 <ul id="nav-links">
-  <li><a href="#">Home</a></li>
-  <li><a href="#">About Us</a></li>
-  <li><a href="#">Health Support Program</a></li>
-  <li><a href="#">Get Involved</a></li>
-  <li><a href="#">Contact Us</a></li>
-</ul>
+        <li><a href="home.html">Home</a></li>
+        <li><a href="index.html">About Us</a></li>
+        <li><a href="involved.html">Get Involved</a></li>
+        <li><a href="contact.html">Contact Us</a></li>
+      </ul>
 
     </nav>
   </header>
