--- a/index.html
+++ b/index.html
@@ -3,20 +3,19 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>About Us - Sanjeevini Trust</title>
-  <link rel="stylesheet" href="style.css" />
+  <title>Sanjeevini Cancer Seva Trust</title>
+  <link rel="stylesheet" href="home.css" />
 </head>
 <body>
-  <!-- ✅ Top-right corner leaf image -->
+  <!-- Top-right leaf image -->
   <img src="leaf_img.svg" alt="Leaf" class="leaf-top-right" />
 
+  <!-- Header -->
   <header>
     <div class="top-bar">Helpline : 6366975666</div>
     <nav class="navbar">
       <img src="header_logo.svg" alt="Cancer Ribbon" />
-
-      
-   <!-- Hamburger Menu Icon -->
+    <!-- Hamburger Menu Icon -->
 <button class="hamburger" onclick="toggleMobileMenu()">☰</button>
 
 <!-- Navigation Links -->
