--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
       <button class="hamburger" id="hamburger">&#9776;</button>
 
       <!-- Navigation Links -->
-     <ul id="nav-links">
-  <li><a href="home.html">Home</a></li>
-  <li><a href="index.html">About Us</a></li>
-  <li><a href="involved.html">Get Involved</a></li>
-  <li><a href="contact.html">Contact Us</a></li>
-</ul>
+      <ul id="nav-links">
+        <li><a href="home.html">Home</a></li>
+        <li><a href="index.html">About Us</a></li>
+        <li><a href="involved.html">Get Involved</a></li>
+        <li><a href="contact.html">Contact Us</a></li>
+      </ul>
     </nav>
   </header>
 
@@ -68,7 +68,7 @@
       <a href="home.html">Home</a>
       <a href="index.html">About Us</a>
       <a href="involved.html">Get Involved</a>
-      <a href="#">Contact Us</a>
+      <a href="contact.html">Contact Us</a>
       <img src="vision_img.svg" alt="Ribbon" class="ribbon-icon" />
     </nav>
 
@@ -100,28 +100,22 @@
     </div>
   </footer>
 
-  <!-- ✅ Hamburger Toggle Script -->
-   <script>
-    const menuToggle = document.getElementById("menu-toggle");
+  <!-- ✅ Working Hamburger Menu Toggle -->
+  <script>
+    const hamburger = document.getElementById("hamburger");
     const navLinks = document.getElementById("nav-links");
 
-    menuToggle.addEventListener("click", () => {
-      navLinks.classList.toggle("active");
+    hamburger.addEventListener("click", () => {
+      navLinks.classList.toggle("show");
     });
 
-    // Optional: Close nav on link click (mobile)
+    // Optional: Hide menu on mobile after clicking a link
     const links = navLinks.querySelectorAll("a");
     links.forEach(link => {
       link.addEventListener("click", () => {
-        navLinks.classList.remove("active");
+        navLinks.classList.remove("show");
       });
     });
-  </script>
-  <script>
-    function toggleMobileMenu() {
-      const navLinks = document.getElementById('nav-links');
-      navLinks.classList.toggle('show');
-    }
   </script>
 </body>
 </html>
