--- a/index.html
+++ b/index.html
@@ -102,20 +102,27 @@
 
   <!-- ✅ Working Hamburger Menu Toggle -->
   <script>
-  const hamburger = document.getElementById("hamburger");
-  const navLinks = document.getElementById("nav-links");
+    const menuToggle = document.getElementById("menu-toggle");
+    const navLinks = document.getElementById("nav-links");
 
-  hamburger.addEventListener("click", () => {
-    navLinks.classList.toggle("show");
-  });
-
-  const links = navLinks.querySelectorAll("a");
-  links.forEach(link => {
-    link.addEventListener("click", () => {
-      navLinks.classList.remove("show");
+    menuToggle.addEventListener("click", () => {
+      navLinks.classList.toggle("active");
     });
-  });
-</script>
+
+    // Optional: Close nav on link click (mobile)
+    const links = navLinks.querySelectorAll("a");
+    links.forEach(link => {
+      link.addEventListener("click", () => {
+        navLinks.classList.remove("active");
+      });
+    });
+  </script>
+  <script>
+    function toggleMobileMenu() {
+      const navLinks = document.getElementById('nav-links');
+      navLinks.classList.toggle('show');
+    }
+  </script>
 
 </body>
 </html>
