--- a/index.html
+++ b/index.html
@@ -3,29 +3,30 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>About Us - Sanjeevini Trust</title>
-  <link rel="stylesheet" href="style.css" />
+  <title>Sanjeevini Cancer Seva Trust</title>
+  <link rel="stylesheet" href="contact.css" />
 </head>
 <body>
-  <!-- ✅ Top-right corner leaf image -->
+  <!-- Top-right leaf image -->
   <img src="leaf_img.svg" alt="Leaf" class="leaf-top-right" />
 
+  <!-- Header -->
   <header>
     <div class="top-bar">Helpline : 6366975666</div>
     <nav class="navbar">
       <img src="header_logo.svg" alt="Cancer Ribbon" />
-
       <!-- Hamburger Menu Icon -->
-      <button class="hamburger" id="hamburger">&#9776;</button>
+<button class="hamburger" onclick="toggleMobileMenu()">☰</button>
 
-      <!-- Navigation Links -->
-      <ul id="nav-links">
+<!-- Navigation Links -->
+<ul id="nav-links">
         <li><a href="home.html">Home</a></li>
         <li><a href="index.html">About Us</a></li>
         <li><a href="involved.html">Get Involved</a></li>
         <li><a href="contact.html">Contact Us</a></li>
       </ul>
-    </nav>
+
+     </nav>
   </header>
 
   <section class="about">
@@ -68,7 +69,7 @@
       <a href="home.html">Home</a>
       <a href="index.html">About Us</a>
       <a href="involved.html">Get Involved</a>
-      <a href="contact.html">Contact Us</a>
+      <a href="#">Contact Us</a>
       <img src="vision_img.svg" alt="Ribbon" class="ribbon-icon" />
     </nav>
 
@@ -100,7 +101,7 @@
     </div>
   </footer>
 
-  <!-- ✅ Working Hamburger Menu Toggle -->
+  <!-- ✅ Hamburger Toggle Script -->
   <script>
     const menuToggle = document.getElementById("menu-toggle");
     const navLinks = document.getElementById("nav-links");
@@ -123,6 +124,5 @@
       navLinks.classList.toggle('show');
     }
   </script>
-
 </body>
 </html>
