--- a/involved.html
+++ b/involved.html
@@ -117,33 +117,36 @@
   </section>
 
   <!-- Footer -->
-  <footer>
+ <footer>
     <nav class="footer-nav">
-      <img src="vision_img.svg" alt="Ribbon" class="ribbon-icon" />
+      <div class="ribbon-icon">🎗️</div>
       <a href="home.html">Home</a>
       <a href="index.html">About Us</a>
       <a href="involved.html">Get Involved</a>
       <a href="contact.html">Contact Us</a>
-      <img src="vision_img.svg" alt="Ribbon" class="ribbon-icon" />
+      <div class="ribbon-icon">🎗️</div>
     </nav>
 
     <div class="footer-box">
-      <img src="header_logo.svg" alt="Sanjeevini Logo" />
+      <div class="footer-logo">
+        <div class="footer-logo-icon">🎗️</div>
+        <span>SANJEEVINI</span>
+      </div>
       <h2>With You in Every Step of Care During Cancer</h2>
       <a href="#" class="read-more-btn">Read More</a>
     </div>
 
     <div class="footer-contact">
       <div class="contact-item">
-        <img src="phone.svg" alt="Phone" />
+        <div class="contact-icon phone-icon-small"></div>
         <p>+91 6366975666</p>
       </div>
       <div class="contact-item">
-        <img src="email.svg" alt="Email" />
+        <div class="contact-icon email-icon-small"></div>
         <p>sanjeevinicancerseva@gmail.com</p>
       </div>
       <div class="contact-item">
-        <img src="location.svg" alt="Location" />
+        <div class="contact-icon location-icon-small"></div>
         <p>
           Mangalore Institute of Oncology<br />
           Pumpwell, Mangaluru<br />
