--- a/index.html
+++ b/index.html
@@ -62,36 +62,36 @@
     </ul>
   </section>
 
-  <footer>
-    <!-- Footer Navigation Menu -->
+ <footer>
     <nav class="footer-nav">
-      <img src="vision_img.svg" alt="Ribbon" class="ribbon-icon" />
+      <div class="ribbon-icon">🎗️</div>
       <a href="home.html">Home</a>
       <a href="index.html">About Us</a>
       <a href="involved.html">Get Involved</a>
-      <a href="#">Contact Us</a>
-      <img src="vision_img.svg" alt="Ribbon" class="ribbon-icon" />
+      <a href="contact.html">Contact Us</a>
+      <div class="ribbon-icon">🎗️</div>
     </nav>
 
-    <!-- White Box Section -->
     <div class="footer-box">
-      <img src="header_logo.svg" alt="Sanjeevini Logo" />
+      <div class="footer-logo">
+        <div class="footer-logo-icon">🎗️</div>
+        <span>SANJEEVINI</span>
+      </div>
       <h2>With You in Every Step of Care During Cancer</h2>
       <a href="#" class="read-more-btn">Read More</a>
     </div>
 
-    <!-- Purple Contact Info Section -->
     <div class="footer-contact">
       <div class="contact-item">
-        <img src="phone.svg" alt="Phone" />
+        <div class="contact-icon phone-icon-small"></div>
         <p>+91 6366975666</p>
       </div>
       <div class="contact-item">
-        <img src="email.svg" alt="Email" />
+        <div class="contact-icon email-icon-small"></div>
         <p>sanjeevinicancerseva@gmail.com</p>
       </div>
       <div class="contact-item">
-        <img src="location.svg" alt="Location" />
+        <div class="contact-icon location-icon-small"></div>
         <p>
           Mangalore Institute of Oncology<br />
           Pumpwell, Mangaluru<br />
@@ -101,6 +101,7 @@
     </div>
   </footer>
 
+         
   <!-- ✅ Hamburger Toggle Script -->
   <script>
     const menuToggle = document.getElementById("menu-toggle");
