--- a/index.html
+++ b/index.html
@@ -15,19 +15,21 @@
     <div class="top-bar">Helpline : 6366975666</div>
     <nav class="navbar">
       <img src="header_logo.svg" alt="Cancer Ribbon" />
-      <!-- Hamburger Menu Icon -->
-<button class="hamburger" onclick="toggleMobileMenu()">☰</button>
+     
 
 <!-- Navigation Links -->
-<ul id="nav-links">
-        <li><a href="home.html">Home</a></li>
-        <li><a href="index.html">About Us</a></li>
-        <li><a href="involved.html">Get Involved</a></li>
-        <li><a href="contact.html">Contact Us</a></li>
-      </ul>
+<nav class="navbar">
+  <img src="header_logo.svg" alt="Cancer Ribbon" />
+  <button class="hamburger" onclick="toggleMobileMenu()">☰</button>
 
-     </nav>
-  </header>
+  <ul id="nav-links" class="nav-hidden">
+    <li><a href="home.html">Home</a></li>
+    <li><a href="index.html">About Us</a></li>
+    <li><a href="involved.html">Get Involved</a></li>
+    <li><a href="contact.html">Contact Us</a></li>
+  </ul>
+</nav>
+      </header>
 
   <section class="about">
     <h1>About Us</h1>
