--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         display: none;
         flex-direction: column;
         position: absolute;
-        top: 60px;
+        top: 100%;
         right: 20px;
         background-color: #fff;
         border: 1px solid #ccc;
@@ -55,17 +55,17 @@
   </style>
 </head>
 <body>
-  <!-- Top-right leaf image -->
+  <!-- Decorative Leaf Image -->
   <img src="leaf_img.svg" alt="Leaf" class="leaf-top-right" />
 
   <!-- Header -->
   <header>
     <div class="top-bar">Helpline : 6366975666</div>
     <nav class="navbar">
-      <img src="header_logo.svg" alt="Cancer Ribbon" />
-      <!-- Hamburger Menu Icon -->
+      <div class="logo-container">
+        <img src="header_logo.svg" alt="Cancer Ribbon" />
+      </div>
       <button class="hamburger" onclick="toggleMobileMenu()">&#9776;</button>
-      <!-- Navigation Links -->
       <ul id="nav-links">
         <li><a href="home.html">Home</a></li>
         <li><a href="index.html">About Us</a></li>
@@ -75,6 +75,7 @@
     </nav>
   </header>
 
+  <!-- About Section -->
   <section class="about">
     <h1>About Us</h1>
     <div class="about-content">
@@ -94,6 +95,7 @@
     </div>
   </section>
 
+  <!-- Objectives Section -->
   <section class="objectives">
     <h2>Objectives of the Sanjeevini Cancer Seva Trust</h2>
     <ul>
@@ -108,6 +110,7 @@
     </ul>
   </section>
 
+  <!-- Footer -->
   <footer>
     <nav class="footer-nav">
       <img src="vision_img.svg" alt="Ribbon" class="ribbon-icon" />
@@ -135,16 +138,12 @@
       </div>
       <div class="contact-item">
         <img src="location.svg" alt="Location" />
-        <p>
-          Mangalore Institute of Oncology<br />
-          Pumpwell, Mangaluru<br />
-          Dakshina Kannada – 575002
-        </p>
+        <p>Mangalore Institute of Oncology<br />Pumpwell, Mangaluru<br />Dakshina Kannada – 575002</p>
       </div>
     </div>
   </footer>
 
-  <!-- Mobile Toggle Script -->
+  <!-- Script -->
   <script>
     function toggleMobileMenu() {
       const navLinks = document.getElementById("nav-links");
