--- a/index.html
+++ b/index.html
@@ -4,78 +4,31 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Sanjeevini Cancer Seva Trust</title>
-  <link rel="stylesheet" href="style.css" />
-  <style>
-    .hamburger {
-      display: none;
-    }
-
-    @media (max-width: 768px) {
-      .navbar {
-        position: relative;
-      }
-
-      .hamburger {
-        display: block;
-        font-size: 28px;
-        background: none;
-        border: none;
-        color: #7b2d8a;
-        cursor: pointer;
-        position: absolute;
-        top: 50%;
-        right: 20px;
-        transform: translateY(-50%);
-        z-index: 1001;
-      }
-
-      #nav-links {
-        display: none;
-        flex-direction: column;
-        position: absolute;
-        top: 100%;
-        right: 20px;
-        background-color: #fff;
-        border: 1px solid #ccc;
-        box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
-        border-radius: 10px;
-        padding: 10px 0;
-        z-index: 1000;
-      }
-
-      #nav-links.show {
-        display: flex;
-      }
-
-      #nav-links li {
-        text-align: right;
-        padding: 10px 20px;
-      }
-    }
-  </style>
+  <link rel="stylesheet" href="contact.css" />
 </head>
 <body>
-  <!-- Decorative Leaf Image -->
+  <!-- Top-right leaf image -->
   <img src="leaf_img.svg" alt="Leaf" class="leaf-top-right" />
 
   <!-- Header -->
   <header>
     <div class="top-bar">Helpline : 6366975666</div>
     <nav class="navbar">
-      <div class="logo-container">
-        <img src="header_logo.svg" alt="Cancer Ribbon" />
-      </div>
-      <button class="hamburger" onclick="toggleMobileMenu()">&#9776;</button>
-      <ul id="nav-links">
+      <img src="header_logo.svg" alt="Cancer Ribbon" />
+      <!-- Hamburger Menu Icon -->
+<button class="hamburger" onclick="toggleMobileMenu()">☰</button>
+
+<!-- Navigation Links -->
+<ul id="nav-links">
         <li><a href="home.html">Home</a></li>
         <li><a href="index.html">About Us</a></li>
         <li><a href="involved.html">Get Involved</a></li>
         <li><a href="contact.html">Contact Us</a></li>
       </ul>
-    </nav>
+
+     </nav>
   </header>
 
-  <!-- About Section -->
   <section class="about">
     <h1>About Us</h1>
     <div class="about-content">
@@ -95,7 +48,6 @@
     </div>
   </section>
 
-  <!-- Objectives Section -->
   <section class="objectives">
     <h2>Objectives of the Sanjeevini Cancer Seva Trust</h2>
     <ul>
@@ -110,45 +62,68 @@
     </ul>
   </section>
 
-  <!-- Footer -->
-  <footer>
+ <footer>
     <nav class="footer-nav">
-      <img src="vision_img.svg" alt="Ribbon" class="ribbon-icon" />
+      <div class="ribbon-icon">🎗️</div>
       <a href="home.html">Home</a>
       <a href="index.html">About Us</a>
       <a href="involved.html">Get Involved</a>
       <a href="contact.html">Contact Us</a>
-      <img src="vision_img.svg" alt="Ribbon" class="ribbon-icon" />
+      <div class="ribbon-icon">🎗️</div>
     </nav>
 
     <div class="footer-box">
-      <img src="header_logo.svg" alt="Sanjeevini Logo" />
+      <div class="footer-logo">
+        <div class="footer-logo-icon">🎗️</div>
+        <span>SANJEEVINI</span>
+      </div>
       <h2>With You in Every Step of Care During Cancer</h2>
       <a href="#" class="read-more-btn">Read More</a>
     </div>
 
     <div class="footer-contact">
       <div class="contact-item">
-        <img src="phone.svg" alt="Phone" />
+        <div class="contact-icon phone-icon-small"></div>
         <p>+91 6366975666</p>
       </div>
       <div class="contact-item">
-        <img src="email.svg" alt="Email" />
+        <div class="contact-icon email-icon-small"></div>
         <p>sanjeevinicancerseva@gmail.com</p>
       </div>
       <div class="contact-item">
-        <img src="location.svg" alt="Location" />
-        <p>Mangalore Institute of Oncology<br />Pumpwell, Mangaluru<br />Dakshina Kannada – 575002</p>
+        <div class="contact-icon location-icon-small"></div>
+        <p>
+          Mangalore Institute of Oncology<br />
+          Pumpwell, Mangaluru<br />
+          Dakshina Kannada – 575002
+        </p>
       </div>
     </div>
   </footer>
 
-  <!-- Script -->
+  <!-- Responsive Hamburger Menu JS -->
+  <script>
+    const menuToggle = document.getElementById("menu-toggle");
+    const navLinks = document.getElementById("nav-links");
+
+    menuToggle.addEventListener("click", () => {
+      navLinks.classList.toggle("active");
+    });
+
+    // Optional: Close nav on link click (mobile)
+    const links = navLinks.querySelectorAll("a");
+    links.forEach(link => {
+      link.addEventListener("click", () => {
+        navLinks.classList.remove("active");
+      });
+    });
+  </script>
   <script>
     function toggleMobileMenu() {
-      const navLinks = document.getElementById("nav-links");
-      navLinks.classList.toggle("show");
+      const navLinks = document.getElementById('nav-links');
+      navLinks.classList.toggle('show');
     }
   </script>
+  
 </body>
 </html>
