--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <!-- Navigation Links -->
 <ul id="nav-links">
         <li><a href="home.html">Home</a></li>
-        <li><a href="involved.html">Get Involved</a></li>
+        <li><a href="index.html">Get Involved</a></li>
         <li><a href="contact.html">Contact Us</a></li>
       </ul>
 
