--- a/aboutus.html
+++ b/aboutus.html
@@ -23,7 +23,7 @@
       <ul id="nav-links">
         <li><button class="close-btn" onclick="toggleMobileMenu()">✕</button></li>
         <li><a href="home.html">Home</a></li>
-        <li><a class="active" href="aboutus.html">About Us</a></li>
+        <li><a href="aboutus.html">About Us</a></li>
         <li><a href="index.html">Get Involved</a></li>
         <li><a href="contact.html">Contact Us</a></li>
       </ul>
