--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 
 <!-- Navigation Links -->
 <ul id="nav-links">
-        <li><a href="home.html">Home</a></li>
+         <li><a href="home.html">Home</a></li>
+        <li><a href="aboutus.html">About Us</a></li>
         <li><a href="index.html">Get Involved</a></li>
         <li><a href="contact.html">Contact Us</a></li>
       </ul>
