--- a/aboutus.html
+++ b/aboutus.html
@@ -68,9 +68,9 @@
     <nav class="footer-nav">
       <div class="ribbon-icon">🎗️</div>
       <a href="home.html">Home</a>
-      <a href="index.html">About Us</a>
-      <a href="involved.html">Get Involved</a>
-      <a href="contact.html">Contact Us</a>
+      <a href="aboutus.html">About Us</a>
+        <a href="index.html">Get Involved</a>
+        <a href="contact.html">Contact Us</a>
       <div class="ribbon-icon">🎗️</div>
     </nav>
 
