--- a/contact.html
+++ b/contact.html
@@ -93,9 +93,10 @@
   <footer>
     <nav class="footer-nav">
       <div class="ribbon-icon">🎗️</div>
-      <a href="home.html">Home</a>
-      <a href="involved.html">Get Involved</a>
-      <a href="contact.html">Contact Us</a>
+     <a href="home.html">Home</a>
+      <a href="aboutus.html">About Us</a>
+        <a href="index.html">Get Involved</a>
+        <a href="contact.html">Contact Us</a>
       <div class="ribbon-icon">🎗️</div>
     </nav>
 
