--- a/aboutus.html
+++ b/aboutus.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Get Involved - Sanjeevini Trust</title>
-  <link rel="stylesheet" href="aboutus.css" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <!-- Top-right leaf image -->
@@ -14,16 +14,16 @@
   <header>
     <div class="top-bar">Helpline : 6366975666</div>
     <nav class="navbar">
-      <img src="header_logo.svg" alt="Cancer Ribbon" class="logo" />
+      <img src="header_logo.svg" alt="Cancer Ribbon" />
 
       <!-- Hamburger Menu Icon -->
-      <button class="hamburger" id="hamburger">☰</button>
+      <button class="hamburger" onclick="toggleMobileMenu()">☰</button>
 
       <!-- Navigation Links -->
       <ul id="nav-links">
-        <li><button class="close-btn" onclick="toggleMobileMenu()">✕</button></li>
+        <button class="close-btn" onclick="toggleMobileMenu()">✕</button>
         <li><a href="home.html">Home</a></li>
-        <li><a href="aboutus.html">About Us</a></li>
+        <li><a class="active" href="aboutus.html">About Us</a></li>
         <li><a href="index.html">Get Involved</a></li>
         <li><a href="contact.html">Contact Us</a></li>
       </ul>
@@ -63,14 +63,15 @@
       <li><span class="bullet-icon">🎗️</span> Old age home for the needy via a sustainable model.</li>
     </ul>
   </section>
+  
 
   <footer>
     <nav class="footer-nav">
       <div class="ribbon-icon">🎗️</div>
       <a href="home.html">Home</a>
       <a href="aboutus.html">About Us</a>
-        <a href="index.html">Get Involved</a>
-        <a href="contact.html">Contact Us</a>
+      <a href="index.html">Get Involved</a>
+      <a href="contact.html">Contact Us</a>
       <div class="ribbon-icon">🎗️</div>
     </nav>
 
@@ -99,21 +100,35 @@
     </div>
   </footer>
 
-  <!-- Working Hamburger Script -->
+  <!-- Toggle script -->
   <script>
-    function toggleMobileMenu() {
-      document.getElementById('nav-links').classList.toggle('show');
-    }
+    const menuToggle = document.getElementById("menu-toggle");
+    const navLinks = document.getElementById("nav-links");
 
-    // Close menu when link is clicked (optional)
-    const links = document.querySelectorAll('#nav-links a');
-    links.forEach(link => {
-      link.addEventListener('click', () => {
-        document.getElementById('nav-links').classList.remove('show');
-      });
+    menuToggle.addEventListener("click", () => {
+      navLinks.classList.toggle("active");
     });
 
-    document.getElementById('hamburger').addEventListener('click', toggleMobileMenu);
+    // Optional: Close nav on link click (mobile)
+    const links = navLinks.querySelectorAll("a");
+    links.forEach(link => {
+      link.addEventListener("click", () => {
+        navLinks.classList.remove("active");
+      });
+    });
+  </script>
+  <script>
+    function toggleMobileMenu() {
+      const navLinks = document.getElementById('nav-links');
+      navLinks.classList.toggle('show');
+    }
+   
+  function toggleMobileMenu() {
+    const nav = document.getElementById('nav-links');
+    nav.classList.toggle('show');
+  }
+
+
   </script>
 </body>
 </html>
