--- a/aboutus.html
+++ b/aboutus.html
@@ -23,8 +23,8 @@
       <ul id="nav-links">
         <button class="close-btn" onclick="toggleMobileMenu()">✕</button>
         <li><a href="home.html">Home</a></li>
-        <li><a class="active" href="index.html">About Us</a></li>
-        <li><a href="involved.html">Get Involved</a></li>
+        <li><a class="active" href="aboutus.html">About Us</a></li>
+        <li><a href="index.html">Get Involved</a></li>
         <li><a href="contact.html">Contact Us</a></li>
       </ul>
     </nav>
@@ -69,8 +69,8 @@
     <nav class="footer-nav">
       <div class="ribbon-icon">🎗️</div>
       <a href="home.html">Home</a>
-      <a href="index.html">About Us</a>
-      <a href="involved.html">Get Involved</a>
+      <a href="aboutus.html">About Us</a>
+      <a href="index.html">Get Involved</a>
       <a href="contact.html">Contact Us</a>
       <div class="ribbon-icon">🎗️</div>
     </nav>
