--- a/aboutus.html
+++ b/aboutus.html
@@ -19,12 +19,12 @@
       <!-- Dropdown Hamburger Menu -->
       <div class="dropdown">
         <button class="hamburger" aria-expanded="false" onclick="toggleDropdown()">☰</button>
-        <ul id="dropdown-menu" class="dropdown-menu">
-          <li><a href="home.html">Home</a></li>
-          <li><a class="active" href="aboutus.html">About Us</a></li>
-          <li><a href="index.html">Get Involved</a></li>
-          <li><a href="contact.html">Contact Us</a></li>
-        </ul>
+        <ul id="nav-links">
+         <li><a href="home.html">Home</a></li>
+        <li><a href="aboutus.html">About Us</a></li>
+        <li><a href="index.html">Get Involved</a></li>
+        <li><a href="contact.html">Contact Us</a></li>
+      </ul>
       </div>
     </nav>
   </header>
