--- a/aboutus.html
+++ b/aboutus.html
@@ -19,12 +19,12 @@
       <!-- Dropdown Hamburger Menu -->
       <div class="dropdown">
         <button class="hamburger" aria-expanded="false" onclick="toggleDropdown()">☰</button>
-        <ul id="nav-links">
-         <li><a href="home.html">Home</a></li>
-        <li><a href="aboutus.html">About Us</a></li>
-        <li><a href="index.html">Get Involved</a></li>
-        <li><a href="contact.html">Contact Us</a></li>
-      </ul>
+        <ul id="nav-links" class="dropdown-menu">
+          <li><a href="home.html">Home</a></li>
+          <li><a href="aboutus.html">About Us</a></li>
+          <li><a href="index.html">Get Involved</a></li>
+          <li><a href="contact.html">Contact Us</a></li>
+        </ul>
       </div>
     </nav>
   </header>
@@ -101,7 +101,7 @@
   <!-- Script for Dropdown -->
   <script>
     function toggleDropdown() {
-      const dropdown = document.getElementById('dropdown-menu');
+      const dropdown = document.getElementById('nav-links'); // Updated to match the id in HTML
       const button = document.querySelector('.hamburger');
       const isOpen = dropdown.classList.toggle('show');
       button.setAttribute('aria-expanded', isOpen);
@@ -109,7 +109,7 @@
 
     // Close dropdown when clicking outside
     window.addEventListener('click', function (e) {
-      const dropdown = document.getElementById('dropdown-menu');
+      const dropdown = document.getElementById('nav-links');
       const button = document.querySelector('.hamburger');
       if (!button.contains(e.target) && !dropdown.contains(e.target)) {
         dropdown.classList.remove('show');
