--- a/aboutus.html
+++ b/aboutus.html
@@ -14,18 +14,19 @@
   <header>
     <div class="top-bar">Helpline : 6366975666</div>
     <nav class="navbar">
-      <img src="header_logo.svg" alt="Cancer Ribbon" />
+      <img src="header_logo.svg" alt="Cancer Ribbon" class="logo" />
 
-      <!-- Dropdown Hamburger Menu -->
-      <div class="dropdown">
-        <button class="hamburger" aria-expanded="false" onclick="toggleDropdown()">☰</button>
-        <ul id="nav-links" class="dropdown-menu">
-          <li><a href="home.html">Home</a></li>
-          <li><a href="aboutus.html">About Us</a></li>
-          <li><a href="index.html">Get Involved</a></li>
-          <li><a href="contact.html">Contact Us</a></li>
-        </ul>
-      </div>
+      <!-- Hamburger Menu Icon -->
+      <button class="hamburger" id="hamburger">☰</button>
+
+      <!-- Navigation Links -->
+      <ul id="nav-links">
+        <li><button class="close-btn" onclick="toggleMobileMenu()">✕</button></li>
+        <li><a href="home.html">Home</a></li>
+        <li><a href="aboutus.html">About Us</a></li>
+        <li><a href="index.html">Get Involved</a></li>
+        <li><a href="contact.html">Contact Us</a></li>
+      </ul>
     </nav>
   </header>
 
@@ -67,8 +68,8 @@
     <nav class="footer-nav">
       <div class="ribbon-icon">🎗️</div>
       <a href="home.html">Home</a>
-      <a href="aboutus.html">About Us</a>
-      <a href="index.html">Get Involved</a>
+      <a href="index.html">About Us</a>
+      <a href="involved.html">Get Involved</a>
       <a href="contact.html">Contact Us</a>
       <div class="ribbon-icon">🎗️</div>
     </nav>
@@ -98,24 +99,21 @@
     </div>
   </footer>
 
-  <!-- Script for Dropdown -->
+  <!-- Working Hamburger Script -->
   <script>
-    function toggleDropdown() {
-      const dropdown = document.getElementById('nav-links'); // Updated to match the id in HTML
-      const button = document.querySelector('.hamburger');
-      const isOpen = dropdown.classList.toggle('show');
-      button.setAttribute('aria-expanded', isOpen);
+    function toggleMobileMenu() {
+      document.getElementById('nav-links').classList.toggle('show');
     }
 
-    // Close dropdown when clicking outside
-    window.addEventListener('click', function (e) {
-      const dropdown = document.getElementById('nav-links');
-      const button = document.querySelector('.hamburger');
-      if (!button.contains(e.target) && !dropdown.contains(e.target)) {
-        dropdown.classList.remove('show');
-        button.setAttribute('aria-expanded', false);
-      }
+    // Close menu when link is clicked (optional)
+    const links = document.querySelectorAll('#nav-links a');
+    links.forEach(link => {
+      link.addEventListener('click', () => {
+        document.getElementById('nav-links').classList.remove('show');
+      });
     });
+
+    document.getElementById('hamburger').addEventListener('click', toggleMobileMenu);
   </script>
 </body>
 </html>
